--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     def nav_version = "2.7.1"
     def koin_version = "3.4.3"
+
+    implementation project(path: ':domain')
+    implementation project(path: ':data')
+
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
