--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,10 @@ android {
     namespace 'com.example.hoteltest'
     compileSdk 34
 
+    buildFeatures {
+        buildConfig = true
+    }
+
     defaultConfig {
         applicationId "com.example.hoteltest"
         minSdk 24
@@ -24,6 +28,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            minifyEnabled false
+            buildConfigField "String", "API_URL", "\"https://run.mocky.io/\""
+            debuggable true
         }
     }
     compileOptions {
@@ -48,7 +58,7 @@ dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':data')
 
-    implementation 'androidx.core:core-ktx:1.10.1'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation "androidx.fragment:fragment-ktx:1.6.1"
