--- a/data/build.gradle
+++ b/data/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation project(path: ':domain')
     testImplementation 'junit:junit:4.13.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
